# cpp-playground

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  build.sh  sonar-project.properties  sonar.sh
CMakeModules/: CodeCoverageAggregate.cmake
src/: CMakeLists.txt  programm.cpp
src/modules/: CMakeLists.txt  mycalculator.cpp  mycalculator.h  mymultiplier.cpp  mymultiplier.h
test/: CMakeLists.txt
test/modules/: CMakeLists.txt  mycalculator-test.cpp  mymodule-test.cpp
